# my-first-pip-package

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
egarciarey1981_math.egg-info/: PKG-INFO  SOURCES.txt
operations/: math.py
src/: add.py
src/math_egarciarey1981/: math.py
